[package]
name = "multicore_image_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3", features = ["winuser"] }
winit  = "0.28"              # needed for WindowBuilder
egui   = "0.26"
eframe = "0.27"
image             = { version = "0.25", features = ["jpeg", "png"] }
rayon             = "1.9"
crossbeam-channel = "0.5"
walkdir           = "2.5"
rfd               = "0.14"
jwalk = "0.8.1"
